--- a/app/design/frontend/lesteti/default/layout/contacts.xml
+++ b/app/design/frontend/lesteti/default/layout/contacts.xml
@@ -35,7 +35,7 @@
     <contacts_index_index translate="label">
         <label>Contact Us Form</label>
         <reference name="head">
-            <action method="setTitle" translate="title" module="contacts"><title>Contact Us</title></action>
+            <action method="setTitle" translate="title" module="contacts"><title>Give Us a Message</title></action>
         </reference>
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
