Add a block of new products

--- a/app/design/frontend/lesteti/default/layout/helloworld.xml
+++ b/app/design/frontend/lesteti/default/layout/helloworld.xml
@@ -6,5 +6,9 @@
                 <template>page/2columns-right.phtml</template>
             </action>
         </reference>
+
+        <reference name="content">
+            <block type="helloworld/newproducts" name="block_newproducts" template="helloworld/newproducts.phtml" />
+        </reference>
     </helloworld_index_hello>
 </layout>
